implement barba // werk + over page

--- a/public/over.html
+++ b/public/over.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Teun Joosen | Werk</title>
+  <title>Teun Joosen | Over mij</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="wrapper" data-barba="wrapper">
-    <main data-barba="container" data-barba-namespace="werk">
+    <main data-barba="container" data-barba-namespace="over">
       <div class="top-header">
         <a href="/">
           <svg xmlns="http://www.w3.org/2000/svg" width="40" viewBox="0 0 40.991 35.418">
@@ -21,21 +21,20 @@
         </a>
         <nav>
           <a class="nav-link" href="/">Home</a>
-          <a class="nav-link" href="over.html">Over mij</a>
-          <a class="nav-link active" href="werk.html">Werk</a>
+          <a class="nav-link active" href="/">Over mij</a>
+          <a class="nav-link" href="werk.html">Werk</a>
         </nav>
       </div>
-      <section class="werk page">
-        <header class="title">
-          <h2>Werk</h2>
-          <div class="werk-filter">
-            <button class="werk-filter-button active" value="">Alles</button>
-            <button class="werk-filter-button" value="website">Website</button>
-            <button class="werk-filter-button" value="video">Video</button>
-            <button class="werk-filter-button" value="overig">Overig</button>
+      <section class="over page">
+        <div class="over-wrapper">
+          <div class="over-info">
+            <h2>Over mij</h2>
+            <p>Mijn naam is Teun Joosen. Ik ben 16 jaar oud en woonachtig in Molenschot. Sinds mijn 11e ben ik bezig met video en fotografie. Op ongeveer 13-jarige leeftijd ben ik mij volledig gaan focussen op design en video. Nu is mijn passie voor deze twee dingen alleen maar gegroeid en ben ik erop gefocust om nieuwe dingen te leren en maken. Ik word blij van een goed ontwerp en kan hier dan ook uren mee bezig zijn. Veel projecten doe ik met een goede vriend Tom van merrienboer.  Wij zijn al enige tijd bezig met ontwerp en video en doen dit graag samen.</p>
           </div>
-        </header>
-        <div class="projects"></div>
+          <div class="over-img">
+            <img src="images/tuen-2.jpg" srcset="images/tuen-2.jpg 1x, images/tuen-2-2x.jpg 2x" alt="Foto van mij">
+          </div>
+        </div>
       </section>
       <footer>
         <div class="socials">
@@ -54,4 +53,5 @@
 
   <script src="main.js"></script>
 </body>
+
 </html>
