setup all projects

--- a/public/werk/never-created.html
+++ b/public/werk/never-created.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Teun Joosen | Over mij</title>
+  <title>Teun Joosen | Never Created</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
   <div class="scroll-container">
     <div class="wrapper" data-barba="wrapper">
-      <main data-barba="container" data-barba-namespace="over">
+      <main data-barba="container" data-barba-namespace="project">
         <div class="top-header">
           <a href="/">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" viewBox="0 0 40.991 35.418">
@@ -22,20 +22,28 @@
           </a>
           <nav>
             <a class="nav-link" href="/">Home</a>
-            <a class="nav-link active" href="/over.html">Over mij</a>
-            <a class="nav-link" href="/werk.html">Werk</a>
+            <a class="nav-link" href="/over.html">Over mij</a>
+            <a class="nav-link active" href="/werk.html">Werk</a>
           </nav>
         </div>
-        <section class="over page">
-          <div class="over-wrapper">
-            <div class="over-info">
-              <h2>Over mij</h2>
-              <p>Mijn naam is Teun Joosen. Ik ben 16 jaar oud en woonachtig in Molenschot. Sinds mijn 11e ben ik bezig met video en fotografie. Op ongeveer 13-jarige leeftijd ben ik mij volledig gaan focussen op design en video. Nu is mijn passie voor deze twee dingen alleen maar gegroeid en ben ik erop gefocust om nieuwe dingen te leren en maken. Ik word blij van een goed ontwerp en kan hier dan ook uren mee bezig zijn. Veel projecten doe ik met een goede vriend Tom van merrienboer.  Wij zijn al enige tijd bezig met ontwerp en video en doen dit graag samen.</p>
-            </div>
-            <div class="over-img">
-              <img src="/images/tuen-2.jpg" srcset="/images/tuen-2.jpg 1x, /images/tuen-2-2x.jpg 2x" alt="Foto van mij">
-            </div>
+        <section class="project page">
+          <header class="title">
+            <h2>Never Created</h2>
+          </header>
+          <div class="project-info">
+            <p>NeverCreated is de naam geworden waaronder ik Tom onze projecten uitvoeren. We zijn samen 6 jaar geleden begonnen met het maken van YouTube video's over games. Als snel gingen we andere video's maken en ging onze focus meer uit naar design. Voor Never Created heb ik onder andere meegeholpen met het maken van de site en de rest van de uitstraling zoals het logo. Deze site is helaas nog niet online maar de grootse delen van het ontwerp liggen al wel klaar.</p>
           </div>
+          <div class="project-links">
+            <h4>Links</h4>
+            -
+          </div>
+          <div class="project-media"></div>
+        </section>
+        <section class="werk">
+          <header class="title">
+            <h2>Bekijk ook</h2>
+          </header>
+          <div class="projects"></div>
         </section>
         <footer>
           <div class="socials">
