--- a/public/werk/travel-enco.html
+++ b/public/werk/travel-enco.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Teun Joosen | Werk</title>
+  <title>Teun Joosen | Travel enco</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
   <div class="scroll-container">
     <div class="wrapper" data-barba="wrapper">
-      <main data-barba="container" data-barba-namespace="werk">
+      <main data-barba="container" data-barba-namespace="project">
         <div class="top-header">
           <a href="/">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" viewBox="0 0 40.991 35.418">
@@ -26,15 +26,24 @@
             <a class="nav-link active" href="/werk.html">Werk</a>
           </nav>
         </div>
-        <section class="werk page">
+        <section class="project page">
           <header class="title">
-            <h2>Werk</h2>
-            <div class="werk-filter">
-              <button class="werk-filter-button active" value="">Alles</button>
-              <button class="werk-filter-button" value="website">Website</button>
-              <button class="werk-filter-button" value="video">Video</button>
-              <button class="werk-filter-button" value="overig">Overig</button>
+            <h2>Travel enco</h2>
+          </header>
+          <div class="project-info">
+            <p>Travel enco is een project wat ik samen met anderen moest doen voor het vak Nederlands. De opdracht was het maken van tijdschrift. Hierin moesten artikelen komen die wij zelf schreven. Ook mochten we zelf het ontwerp bedenken en uitvoeren. Binnen mijn groepje kreeg ik de volledige verantwoordelijkheid voor het ontwerp. Ik ben begonnen met het bekijken van echte tijdschriften en ik heb tijdschriften online bekeken. Hierna ben ik de cover gaan schetsen en heb ik de vormgeving van een artikel getekend. Toen mijn groepje akkoord was gegaan met dit ontwerp ben ik de cover gaan ontwerpen in Adobe Photoshop. Hierna heb ik in hetzelfde programma de rest van het tijdschrift ontworpen. Toen dit klaar was hebben we het laten printen bij een copyshop om een zo mooi mogelijk resultaat te krijgen. Ook is het tijdschrift online te lezen. Voor dit project heb ik een mooi eindcijfer gekregen, namelijk een 8,5.</p>
+          </div>
+          <div class="project-links">
+            <h4>Links</h4>
+            <div class="link-wrapper">
+              <a href="https://issuu.com/teunjoosen/docs/cover_versie_2" target="_blank" class="link">https://issuu.com/teunjoosen/docs/cover_versie_2</a>
             </div>
+          </div>
+          <div class="project-media"></div>
+        </section>
+        <section class="werk">
+          <header class="title">
+            <h2>Bekijk ook</h2>
           </header>
           <div class="projects"></div>
         </section>
