--- a/public/werk/max-v-dijk.html
+++ b/public/werk/max-v-dijk.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Teun Joosen | Over mij</title>
+  <title>Teun Joosen | Max v Dijk</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
   <div class="scroll-container">
     <div class="wrapper" data-barba="wrapper">
-      <main data-barba="container" data-barba-namespace="over">
+      <main data-barba="container" data-barba-namespace="project">
         <div class="top-header">
           <a href="/">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" viewBox="0 0 40.991 35.418">
@@ -22,20 +22,30 @@
           </a>
           <nav>
             <a class="nav-link" href="/">Home</a>
-            <a class="nav-link active" href="/over.html">Over mij</a>
-            <a class="nav-link" href="/werk.html">Werk</a>
+            <a class="nav-link" href="/over.html">Over mij</a>
+            <a class="nav-link active" href="/werk.html">Werk</a>
           </nav>
         </div>
-        <section class="over page">
-          <div class="over-wrapper">
-            <div class="over-info">
-              <h2>Over mij</h2>
-              <p>Mijn naam is Teun Joosen. Ik ben 16 jaar oud en woonachtig in Molenschot. Sinds mijn 11e ben ik bezig met video en fotografie. Op ongeveer 13-jarige leeftijd ben ik mij volledig gaan focussen op design en video. Nu is mijn passie voor deze twee dingen alleen maar gegroeid en ben ik erop gefocust om nieuwe dingen te leren en maken. Ik word blij van een goed ontwerp en kan hier dan ook uren mee bezig zijn. Veel projecten doe ik met een goede vriend Tom van merrienboer.  Wij zijn al enige tijd bezig met ontwerp en video en doen dit graag samen.</p>
-            </div>
-            <div class="over-img">
-              <img src="/images/tuen-2.jpg" srcset="/images/tuen-2.jpg 1x, /images/tuen-2-2x.jpg 2x" alt="Foto van mij">
+        <section class="project page">
+          <header class="title">
+            <h2>Max v Dijk</h2>
+          </header>
+          <div class="project-info">
+            <p>Fotograaf Max van dijk is een goede vriend van mij. Hij vroeg Tom en mij een persoonlijke website te maken waar hij zijn werk kan presenteren. Tom en ik zijn gestart met het opdoen van inspiratie en het maken van verschillende schetsen. Aan de hand van die schetsen hebben we een ontwerp gemaakt. Het speciale van deze site vind ik de mogelijkheid die is ingebouwd om foto's te kunnen uploaden en te kunnen wijzigen. De website staat nu ongeveer een half jaar online.</p>
+          </div>
+          <div class="project-links">
+            <h4>Links</h4>
+            <div class="link-wrapper">
+              <a href="https://maxdijk.nl/" target="_blank" class="link">https://maxdijk.nl/</a>
             </div>
           </div>
+          <div class="project-media"></div>
+        </section>
+        <section class="werk">
+          <header class="title">
+            <h2>Bekijk ook</h2>
+          </header>
+          <div class="projects"></div>
         </section>
         <footer>
           <div class="socials">
