--- a/public/werk/stta-aftermovie.html
+++ b/public/werk/stta-aftermovie.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Teun Joosen | Werk</title>
+  <title>Teun Joosen | STTA aftermovie</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
   <div class="scroll-container">
     <div class="wrapper" data-barba="wrapper">
-      <main data-barba="container" data-barba-namespace="werk">
+      <main data-barba="container" data-barba-namespace="project">
         <div class="top-header">
           <a href="/">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" viewBox="0 0 40.991 35.418">
@@ -26,15 +26,29 @@
             <a class="nav-link active" href="/werk.html">Werk</a>
           </nav>
         </div>
-        <section class="werk page">
+        <section class="project page">
           <header class="title">
-            <h2>Werk</h2>
-            <div class="werk-filter">
-              <button class="werk-filter-button active" value="">Alles</button>
-              <button class="werk-filter-button" value="website">Website</button>
-              <button class="werk-filter-button" value="video">Video</button>
-              <button class="werk-filter-button" value="overig">Overig</button>
+            <h2>STTA aftermovie</h2>
+          </header>
+          <div class="project-info">
+            <p>Elk jaar wordt er in gemeente Alphen een grote tractorpulling wedstrijd georganiseerd waar teams van over de hele wereld aan deelnemen. STTA vroeg in een oproep om vrijwilligers die mee zouden willen helpen met dit evenement. Bij het zien van deze oproep twijfelde Tom en ik geen moment en vroegen we of wij foto's en een mooie aftermovie konden maken. Na twee telefoontjes was dit geregeld en mochten we als vrijwilliger alle foto's en de aftermovie realiseren. Het eindresultaat is nu te zien op de facebookpagina van STTA en op hun website.</p>
+          </div>
+          <div class="project-links">
+            <h4>Links</h4>
+            <div class="link-wrapper">
+              <a href="http://www.stta.nl/" target="_blank" class="link">http://www.stta.nl/</a>
             </div>
+            <div class="link-wrapper">
+              <a href="https://youtu.be/j9QqcF2jKgU" target="_blank" class="link">https://youtu.be/j9QqcF2jKgU</a>
+            </div>
+          </div>
+          <div class="project-media">
+            <div class="player" data-player-id="j9QqcF2jKgU" data-player-ratio="2"></div>
+          </div>
+        </section>
+        <section class="werk">
+          <header class="title">
+            <h2>Bekijk ook</h2>
           </header>
           <div class="projects"></div>
         </section>
