--- a/public/werk/studio-tielemans.html
+++ b/public/werk/studio-tielemans.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Teun Joosen | Werk</title>
+  <title>Teun Joosen | Studio Tielemans</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
   <div class="scroll-container">
     <div class="wrapper" data-barba="wrapper">
-      <main data-barba="container" data-barba-namespace="werk">
+      <main data-barba="container" data-barba-namespace="project">
         <div class="top-header">
           <a href="/">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" viewBox="0 0 40.991 35.418">
@@ -26,15 +26,22 @@
             <a class="nav-link active" href="/werk.html">Werk</a>
           </nav>
         </div>
-        <section class="werk page">
+        <section class="project page">
           <header class="title">
-            <h2>Werk</h2>
-            <div class="werk-filter">
-              <button class="werk-filter-button active" value="">Alles</button>
-              <button class="werk-filter-button" value="website">Website</button>
-              <button class="werk-filter-button" value="video">Video</button>
-              <button class="werk-filter-button" value="overig">Overig</button>
-            </div>
+            <h2>Studio Tielemans</h2>
+          </header>
+          <div class="project-info">
+            <p>Voor school moesten wij vorig jaar en dit jaar een week snuffelstage lopen. Deze beide stageweken heb ik bij Studio Tielemans gedaan. Studio Tielemans is een sign studio en ontwerp studio. Tijdens mijn stage heb ik veel geleerd en ook veel gedaan. Zo heb ik voor een schoolopdracht een nieuw logo ontworpen voor het bedrijf. Ik vond dat dit logo een modern logo moest worden. Omdat het bedrijf steeds vernieuwd en moderner wordt. Hier hoort daarom een passend logo bij met de al gebruikte bedrijfskleuren. Omdat het oude logo een foto van een normaal oog was kreeg ik het idee om dit te versimpelen zodat mensen het logo makkelijker onthouden. Met dit logo heb ik ook een visitekaartje en briefpapier ontworpen. Het logo, de visitekaartjes en het briefpapier worden nu ook echt gebruikt door het bedrijf.</p>
+          </div>
+          <div class="project-links">
+            <h4>Links</h4>
+            -
+          </div>
+          <div class="project-media"></div>
+        </section>
+        <section class="werk">
+          <header class="title">
+            <h2>Bekijk ook</h2>
           </header>
           <div class="projects"></div>
         </section>
