added most info // fixed some stuff

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
               <p>Ben een 16-jarigen jongen uit een klein dorpje Molenschot midden in Noord-Brabant. Zelf vind ik het heel
                 leuk om bezig te zijn met het maken van video’s en van mooie ontwerpen.</p>
               <div class="link-wrapper">
-                <a class="link" href="/over.html">Lees meer</a>
+                <a href="/over.html">Lees meer</a>
               </div>
             </div>
             <div class="header-content__right">
