--- a/public/werk/never-created.html
+++ b/public/werk/never-created.html
@@ -27,17 +27,24 @@
           </nav>
         </div>
         <section class="project page">
-          <header class="title">
-            <h2>Never Created</h2>
-          </header>
-          <div class="project-info">
-            <p>NeverCreated is de naam geworden waaronder ik Tom onze projecten uitvoeren. We zijn samen 6 jaar geleden begonnen met het maken van YouTube video's over games. Als snel gingen we andere video's maken en ging onze focus meer uit naar design. Voor Never Created heb ik onder andere meegeholpen met het maken van de site en de rest van de uitstraling zoals het logo. Deze site is helaas nog niet online maar de grootse delen van het ontwerp liggen al wel klaar.</p>
+          <div class="project-wrapper">
+            <div class="project-info">
+              <h2>Never Created</h2>
+              <p>NeverCreated is de naam geworden waaronder ik Tom onze projecten uitvoeren. We zijn samen 6 jaar geleden begonnen met het maken van YouTube video's over games. Als snel gingen we andere video's maken en ging onze focus meer uit naar design. Voor Never Created heb ik onder andere meegeholpen met het maken van de site en de rest van de uitstraling zoals het logo. Deze site is helaas nog niet online maar de grootse delen van het ontwerp liggen al wel klaar.</p>
+              <div class="project-links">
+                <h4>Links</h4>
+                <a href="https://nevercreated.nl/" class="link" target="_blank">https://nevercreated.nl/</a>
+              </div>
+            </div>
+            <div class="project-img">
+              <img src="/images/teun-en-tom.png" srcset="/images/teun-en-tom.png 1x, /images/teun-en-tom-2x.png 2x" alt="Foto van Tom en mij">
+            </div>
           </div>
-          <div class="project-links">
-            <h4>Links</h4>
-            -
+          <div class="project-media">
+            <div class="project-media__item">
+              <img src="/images/nc_xd.png" alt="Xd project van Never Created website">
+            </div>
           </div>
-          <div class="project-media"></div>
         </section>
         <section class="werk">
           <header class="title">
