--- a/public/werk/studio-tielemans.html
+++ b/public/werk/studio-tielemans.html
@@ -33,11 +33,11 @@
           <div class="project-info">
             <p>Voor school moesten wij vorig jaar en dit jaar een week snuffelstage lopen. Deze beide stageweken heb ik bij Studio Tielemans gedaan. Studio Tielemans is een sign studio en ontwerp studio. Tijdens mijn stage heb ik veel geleerd en ook veel gedaan. Zo heb ik voor een schoolopdracht een nieuw logo ontworpen voor het bedrijf. Ik vond dat dit logo een modern logo moest worden. Omdat het bedrijf steeds vernieuwd en moderner wordt. Hier hoort daarom een passend logo bij met de al gebruikte bedrijfskleuren. Omdat het oude logo een foto van een normaal oog was kreeg ik het idee om dit te versimpelen zodat mensen het logo makkelijker onthouden. Met dit logo heb ik ook een visitekaartje en briefpapier ontworpen. Het logo, de visitekaartjes en het briefpapier worden nu ook echt gebruikt door het bedrijf.</p>
           </div>
-          <div class="project-links">
-            <h4>Links</h4>
-            -
+          <div class="project-media">
+            <div class="project-media__item">
+              <img src="/images/kaartje-studio-tielemans.jpg" alt="Visitekaart Studio Tielemans">
+            </div>
           </div>
-          <div class="project-media"></div>
         </section>
         <section class="werk">
           <header class="title">
