--- a/public/werk/video-s.html
+++ b/public/werk/video-s.html
@@ -45,7 +45,17 @@
               <a href="https://youtu.be/1AAHzzEOpEw" target="_blank" class="link">https://youtu.be/1AAHzzEOpEw</a>
             </div>
           </div>
-          <div class="project-media"></div>
+          <div class="project-media">
+            <div class="project-media__item">
+              <iframe data-ratio="2.3470790378006874" src="https://player.vimeo.com/video/253380537?color=F6583F" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+            <div class="project-media__item">
+              <iframe data-ratio="1.7777777777777777" src="https://player.vimeo.com/video/253295546?color=F6583F" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+            <div class="project-media__item">
+              <iframe data-ratio="1.92" width="560" height="315" src="https://www.youtube.com/embed/1AAHzzEOpEw?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
         </section>
         <section class="werk">
           <header class="title">
