--- a/public/werk/stta-aftermovie.html
+++ b/public/werk/stta-aftermovie.html
@@ -43,7 +43,9 @@
             </div>
           </div>
           <div class="project-media">
-            <div class="player" data-player-id="j9QqcF2jKgU" data-player-ratio="2"></div>
+            <div class="project-media__item">
+              <iframe data-ratio="2" src="https://www.youtube.com/embed/j9QqcF2jKgU?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
           </div>
         </section>
         <section class="werk">
