--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,12 @@
           <div class="header-content">
             <div class="header-content__left">
               <h1>
-                <span>Hi,</span>
+                <span>Hoi,</span>
                 <br>
-                I'm Teun Joosen
+                ik ben Teun Joosen
               </h1>
-              <p>Ben een 16-jarigen jongen uit een klein dorpje Molenschot midden in Noord-Brabant. Zelf vind ik het heel
+              <p>Ben een 17-jarigen jongen uit een klein dorpje Molenschot midden in Noord-Brabant. Zelf vind ik het
+                heel
                 leuk om bezig te zijn met het maken van video’s en van mooie ontwerpen.</p>
               <div class="link-wrapper">
                 <a href="/over.html">Lees meer</a>
@@ -171,7 +172,7 @@
             <span>/</span>
             <a href="mailto:teun@nevercreated.nl" target="_blank">Email</a>
           </div>
-          <span>&copy; Teun Joosen 2019</span>
+          <span>&copy; Teun Joosen 2021</span>
         </footer>
       </main>
     </div>
@@ -179,4 +180,5 @@
 
   <script src="/main.js"></script>
 </body>
+
 </html>
