--- a/public/over.html
+++ b/public/over.html
@@ -30,7 +30,12 @@
           <div class="over-wrapper">
             <div class="over-info">
               <h2>Over mij</h2>
-              <p>Mijn naam is Teun Joosen. Ik ben 16 jaar oud en woonachtig in Molenschot. Sinds mijn 11e ben ik bezig met video en fotografie. Op ongeveer 13-jarige leeftijd ben ik mij volledig gaan focussen op design en video. Nu is mijn passie voor deze twee dingen alleen maar gegroeid en ben ik erop gefocust om nieuwe dingen te leren en maken. Ik word blij van een goed ontwerp en kan hier dan ook uren mee bezig zijn. Veel projecten doe ik met een goede vriend Tom van Merrienboer.  Wij zijn al enige tijd bezig met ontwerp en video en doen dit graag samen.</p>
+              <p>Mijn naam is Teun Joosen. Ik ben 17 jaar oud en woonachtig in Molenschot. Sinds mijn 11e ben ik bezig
+                met video en fotografie. Op ongeveer 13-jarige leeftijd ben ik mij volledig gaan focussen op design en
+                video. Nu is mijn passie voor deze twee dingen alleen maar gegroeid en ben ik erop gefocust om nieuwe
+                dingen te leren en maken. Ik word blij van een goed ontwerp en kan hier dan ook uren mee bezig zijn.
+                Veel projecten doe ik met een goede vriend Tom van Merrienboer. Wij zijn al enige tijd bezig met ontwerp
+                en video en doen dit graag samen.</p>
             </div>
             <div class="over-img">
               <img src="/images/tuen-2.jpg" srcset="/images/tuen-2.jpg 1x, /images/tuen-2-2x.jpg 2x" alt="Foto van mij">
@@ -47,7 +52,7 @@
             <span>/</span>
             <a href="mailto:teun@nevercreated.nl" target="_blank">Email</a>
           </div>
-          <span>&copy; Teun Joosen 2019</span>
+          <span>&copy; Teun Joosen 2021</span>
         </footer>
       </main>
     </div>
@@ -55,4 +60,5 @@
 
   <script src="/main.js"></script>
 </body>
+
 </html>
